--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 .section-title {
     font-size: 50px;
     letter-spacing: 8px;
-    padding-top: 100px;
+    padding-top: 130px;
 }
 /* header */
 header {
@@ -17,8 +17,6 @@ header {
 }
 .container {
     text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
 }
 .header-title-wrap {
     width: 100%;
@@ -57,22 +55,22 @@ header {
 
 /* section self-introduction */
 .self-introduction {
-    /* padding: 100px 0; */
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .s-ntroduction-wrap {
     padding-top: 100px;
     display: flex;
-    justify-content: space-between;
 }
 .image-item-wrap {
-    flex: 3;
+    flex: 4;
 }
 .image-item-wrap img {
     border-radius: 50%;
 }
 .text-item-wrap {
     padding-left: 50px;
-    flex: 7;
+    flex: 6;
     text-align: left;
 }
 .text-item-wrap ul li {
@@ -82,33 +80,41 @@ header {
 
 /* performance */
 .performance {
-    margin: 0 auto;
-    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .introduction {
-    padding-top: 50px;
+    padding-top: 90px;
+    display: flex;
+    justify-content: space-between;
 }
-.bono-img-wrap {
-    width: 100%;
-    height: 320px;
+.bono-img {
+    flex: 1;
 }
-.bono-img-wrap img {
+.img-btn {
     width: 400px;
-    cursor: pointer;
-    vertical-align: bottom;
 }
-.bono-img-wrap img:hover {
-    width: 380px;
+.img-btn:hover {
+    opacity: 0.7;
+    transform: translateY(-10px);
     transition: 0.4s;
 }
-
-/* .introduction-text {
-
-} */
-.color {
-    background-color: red;
-    z-index: 10;
-    width
+.introduction-text {
+    flex: 1;
+    padding-left: 40px;
+    text-align: left;
+}
+.introduction-text h1 {
+    font-size: 20px;
+    padding-bottom: 30px;
+}
+.text-title {
+    font-size: 15px; 
+    padding-bottom: 10px;
+}
+.introduction-text p {
+    padding-bottom: 20px;
+    font-size: 13px;
 }
 .bono-img {
     width: 100%;
