--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,78 @@
 html {
     font-size: 62.5%;
+    height: 100%;
 }
 * {
     box-sizing: border-box;
     font-family: 'Hiragino Kaku Gothic Pro','ヒラギノ角ゴ Pro W3','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
-.section-title {
-    font-size: 50px;
-    letter-spacing: 8px;
-    padding-top: 130px;
-}
 /* header */
 header {
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 100vh;
+    height: 770px;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 10;
+    padding-bottom: 50px;
 }
-.container {
-    text-align: center;
+nav {
+    height: 50px;
+    z-index: 10;
 }
-.header-title-wrap {
-    width: 100%;
-    height: auto;
-    padding-top: 8rem;
-    padding-bottom: 8rem;
+.header_list {
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    justify-content: flex-end
 }
-.title-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    width: 80%;
-    height: 100px;
-}
-.header-title {
-    padding-bottom: 20px;
-    font-size: 80px;
-    font-weight: lighter;
-    letter-spacing: 5px;
-}
-.name {
-    letter-spacing: 2px;
-    font-weight: bold;
-    font-size: 20px;
-}
-.menu-icon {
-    position: absolute;
-    top: 30px;
-    right: 45px;
-    font-size: 30px;
-    cursor: pointer;
+.header_list li {
+    font-size: 15px;
+    line-height: 50px;
+    margin-left: 50px;
 }
 
+.title_wrapper {
+    height: 100%;
+    background-color: blue;
+    text-align: center;
+    display: table;
+    width: 100%;
+}
+.title_container {
+    display: table-cell;
+    vertical-align: middle;
+}
+.header_title {
+    font-size: 70px;
+    letter-spacing: 3px;
+}
+.name {
+    padding-top: 20px;
+    font-size: 60px;
+    letter-spacing: 3px;
+}
+
+
+.section-title {
+    text-align: center;
+    font-size: 50px;
+    margin: 80px 0;
+}
 /* section self-introduction */
 .self-introduction {
     margin-left: 5%;
     margin-right: 5%;
 }
-.s-ntroduction-wrap {
-    padding-top: 100px;
+.s-introduction-wrap {
     display: flex;
 }
 .image-item-wrap {
-    flex: 4;
+    flex: 5;
 }
 .image-item-wrap img {
     border-radius: 50%;
 }
 .text-item-wrap {
     padding-left: 50px;
-    flex: 6;
+    flex: 5;
     text-align: left;
 }
 .text-item-wrap ul li {
@@ -84,7 +86,6 @@ header {
     margin-right: 5%;
 }
 .introduction {
-    padding-top: 90px;
     display: flex;
     justify-content: space-between;
 }
