--- a/bono-hair/bono.css
+++ b/bono-hair/bono.css
@@ -26,28 +26,105 @@ nav {
   transition: 0.4s;
 }
 /* bono_top */
-.bono_top {
-  padding-top: 120px;
-  text-align: center;
-}
-.top_title {
-  font-size: 25px;
-}
-.bono_item {
+main {
   width: 85%;
   margin: 0 auto;
 }
-.bono_img-wrap {
-  padding-top: 50px;
+.title_wrap {
+  padding-top: 90px;
 }
-.bono_details {
-  padding: 80px 100px;
-  text-align: left;
+.main_title_wrap {
+  text-align: center;
 }
-.bono_details li {
-  font-size: 22px;
-  padding-bottom: 20px;
+.main-title {
+  font-size: 38px;
+  letter-spacing: 5px;
 }
-.bono_img {
-  width: 100%;
+.sub_title {
+  padding: 20px 0;
+  font-size: 25px;;
+}
+.pm_btn {
+  color: #fff;
+  text-decoration: none;
+  font-size: 15px;
+  background-color: seagreen;
+  padding: 10px 30px;
+  margin: 50px 20px 0 0;
+  cursor: pointer;
+  border-radius: 8px;
+}
+.pm_btn:hover {
+  background-color: steelblue;
+  transition: 0.4s;
+}
+
+/* question_list_wrap */
+.question_list_wrap {
+  margin-top: 50px;
+  border: 1px solid #2e8b57;
+}
+.question_list {
+  padding: 30px 120px;
+}
+.question {
+  font-size: 18px;
+  padding-top: 20px;
+  list-style: square;
+}
+.question:first-child {
+  padding-top: 0;
+}
+.question a {
+  text-decoration: none;
+}
+
+/* q_and_a_wrap" */
+.q_and_a_wrap {
+  padding-top: 100px;
+}
+.q_and_a_title {
+  color:  #2e8b57;
+  font-weight: bold;
+  letter-spacing: 3px;
+  font-size: 25px;
+  text-align: center;
+}
+.q_logo {
+  color: #2e8b57;
+  font-size: 30px;
+  padding-right: 10px;
+}
+.a_logo {
+  color: #dc143c;
+  font-size: 30px;
+  padding-right: 10px;
+}
+.q_and_a {
+  padding-top: 120px;
+}
+.q_wrap {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding-bottom: 50px;
+}
+.q_text {
+  padding-right: 50px;
+  text-align: right;
+  flex: 9;
+}
+.user_img {
+  width: 100px;
+  flex: 1;
+}
+.a_wrap {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+.a_text {
+  flex: 9;
+  padding-left: 50px;
+  line-height: 30px;
 }
