--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  font-family: 'Lato', 'Noto Sans JP', 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+}
 /* 共通スタイル */
 .title_name {
   text-align: center;
@@ -32,7 +35,6 @@ nav {
   color: #00bfff;
   transition: 0.4s;
 }
-
 /* top */
 .top {
   background-image: url(../img/camera-1215737_1280.jpg);
@@ -57,39 +59,81 @@ nav {
 /* introduction */
 .introduction {
   padding: 100px 0 100px 0;
+  height: 400px;
 }
 .id_content_wrap {
   width: 85%;
   margin: 0 auto;
   display: flex;
+  align-items: center;
 }
+
 .id_img img {
   width: 350px;
   height: 280px;
 }
 .id_img {
   text-align: center;
-  flex: 5;
+  flex: 4;
   padding-right: 20px;
 }
 .id_text {
-  flex: 5;
+  flex: 6;
 }
 .id_text dl {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 .id_text dl dt {
-  padding-bottom: 5px;
+  font-size: 25px;
+  border-left: 10px solid #228b22;
+  margin-bottom: 5px;
+  padding-left: 5px;
 }
 .id_text dl dd {
-  font-size: 17px;
-  line-height: 20px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+/* pg_myself */
+.pg_myself {
+  padding: 100px 0 100px 0;
+  background-color: rgba(242, 242, 242,0.8);
+}
+.pg_wrap {
+  width: 85%;
+  margin: 0 auto;
+}
+.pg_item_wrap {
+  display: flex;
+}
+.skill_img_wrap {
+  flex: 6;
+  padding-right: 40px;
+}
+.skill_img {
+  width: 100%;
+}
+.tool_wrap {
+  flex: 4;
+  padding-top: 30px;
+}
+.tool_wrap dl {
+  padding-bottom: 20px;
+}
+.tool_wrap dt {
+  border-left: 10px solid #228b22;
+  font-size: 30px;
+  margin-bottom: 30px;
+  padding-left: 5px;
+}
+.tool_wrap dd {
+  font-size: 20px;
+  padding-bottom: 20px;
 }
 
 /* performance */
 .performance {
   padding: 100px 0 100px 0;
-  background-color: rgba(242, 242, 242,0.8);
 }
 .pm_wrap {
   width: 85%;
@@ -98,13 +142,13 @@ nav {
 }
 .pm_item_title {
   padding: 40px;
-  font-size: 22px;
+  font-size: 25px;
   text-align: center;
 }
 .pm_item {
   width: 100%;
 }
-.pm_item:first-child {
+.pm_item:first-of-type {
   padding-bottom: 80px;
 }
 .pm_img {
@@ -132,9 +176,4 @@ nav {
 .pm_btn:hover {
   background-color: steelblue;
   transition: 0.4s;
-}
-
-/* pg_myself */
-.pg_myself {
-  padding: 100px 0 100px 0;
 }
