--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,57 @@ body {
   font-size: 32px;
   letter-spacing: 3px;
 } 
-/* header */
+
+/* header menu_list */
+.menu_list {
+  width: 100%;
+  height: 150px;
+  align-items: center;
+  position: absolute;
+  top: -170px;
+  text-align: center;
+  background-color: #66cdaa;
+  padding: 10px 0;
+  z-index: 15;
+}
+.menu_list li {
+  padding: 10px 0;
+  margin: 10px 0;
+  font-size: 18px;
+}
+/* .menu_list li:first-of-type {
+  margin-top: 0px;
+} */
+.fa-times {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 20;
+}
+.menu_list li a:hover {
+  color: #000;
+  transition: 0.4s;
+}
+/* header header_list*/
 nav {
+  position: relative;
   position: fixed;
-  background-color: rgba(0,0,0,0.8);
   height: 60px;
   z-index: 10;  
   width: 100%;
+  background-color: rgba(0,0,0,0.8);
+}
+.fa-bars {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
 }
 .header_list {
   width: 85%;
@@ -27,7 +71,7 @@ nav {
   margin-left: 80px;
   font-size: 16px;
 }
-.header_list li a {
+.header_list li a,.menu_list li a {
   text-decoration: none;
   color: #fff;
 }
@@ -59,7 +103,7 @@ nav {
 /* introduction */
 .introduction {
   padding: 100px 0 100px 0;
-  height: 400px;
+
 }
 .id_content_wrap {
   width: 85%;
@@ -75,7 +119,7 @@ nav {
 .id_img {
   text-align: center;
   flex: 4;
-  padding-right: 20px;
+  padding-right: 40px;
 }
 .id_text {
   flex: 6;
@@ -122,7 +166,7 @@ nav {
 }
 .tool_wrap dt {
   border-left: 10px solid #228b22;
-  font-size: 30px;
+  font-size: 25px;
   margin-bottom: 30px;
   padding-left: 5px;
 }
@@ -141,39 +185,35 @@ nav {
   text-align: center;
 }
 .pm_item_title {
+  color: #228b22;
+  letter-spacing: 3px;
   padding: 40px;
-  font-size: 25px;
+  font-size: 35px;
   text-align: center;
 }
 .pm_item {
   width: 100%;
 }
 .pm_item:first-of-type {
-  padding-bottom: 80px;
+  padding-bottom: 150px;
 }
 .pm_img {
   width: 100%;
   padding-bottom: 40px;
 }
-.todo_details {
-  text-align: center;
-  padding-bottom: 60px;
-}
-.todo_details li {
-  font-size: 20px;
-  padding-top: 20px;
-}
 .pm_btn {
   color: #fff;
   text-decoration: none;
+  display: inline-block;
   font-size: 15px;
   background-color: seagreen;
   padding: 20px 40px;
-  margin: 50px 20px 0 0;
+  margin-right: 20px;
   cursor: pointer;
   border-radius: 8px;
+  transition: 0.4s;
 }
 .pm_btn:hover {
   background-color: steelblue;
-  transition: 0.4s;
+
 }
