introduction/css　cssファイル作成

--- a/introduction/css/introduction.css
+++ b/introduction/css/introduction.css
@@ -1,10 +1,54 @@
-/* header */
+/* header menu_list */
+.menu_list {
+  width: 100%;
+  height: 250px;
+  align-items: center;
+  position: absolute;
+  top: -270px;
+  text-align: center;
+  background-color: #66cdaa;
+  padding: 10px 0;
+  z-index: 15;
+  transition: 0.4s;
+}
+body.open_menu .menu_list {
+  top: 0px;
+}
+.menu_list li {
+  padding: 10px 0;
+  margin: 10px 0;
+  font-size: 18px;
+}
+.fa-times {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 20;
+}
+.menu_list li a:hover {
+  color: #000;
+  transition: 0.4s;
+}
+/* header header_list*/
 nav {
+  position: relative;
   position: fixed;
-  background-color: rgba(0,0,0,0.8);
   height: 60px;
   z-index: 10;  
   width: 100%;
+  background-color: rgba(0,0,0,0.8);
+}
+.fa-bars {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
 }
 .header_list {
   width: 85%;
@@ -14,17 +58,18 @@ nav {
 }
 .header_list li {
   line-height: 60px;
-  margin-left: 80px;
+  margin-left: 50px;
   font-size: 16px;
 }
-.header_list li a {
+.header_list li a,.menu_item {
   text-decoration: none;
   color: #fff;
 }
 .header_list li a:hover {
-  color: #00bfff;
+  color: #66cdaa;
   transition: 0.4s;
 }
+
 /* bono_top */
 main {
   width: 85%;
@@ -37,7 +82,7 @@ main {
   text-align: center;
 }
 .main-title {
-  font-size: 38px;
+  font-size: 35px;
   letter-spacing: 5px;
   padding: 50px;
 }
