Q&A レイアウト変更、内容変更

--- a/introduction/css/i_media.css
+++ b/introduction/css/i_media.css
@@ -40,7 +40,8 @@
 }
 @media screen and (max-width: 620px) {
   .main-title {
-    font-size: 20px;
+    font-size: 18px;
+    letter-spacing: 2px;
   }
   .question_list {
     padding: 30px 50px;
