--- a/history/css/h_media.css
+++ b/history/css/h_media.css
@@ -7,3 +7,17 @@
     letter-spacing: 3px;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .main_title {
+    font-size: 20px;
+    letter-spacing: 0px;
+  }
+  .item_title {
+    font-size: 15px;
+  }
+  .item_text {
+    font-size: 13px;
+    line-height: 20px;
+  }
+}
