section effort(現在の取り組み)を追加

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,10 @@ body {
 /* header menu_list */
 .menu_list {
   width: 100%;
-  height: 150px;
+  height: 200px;
   align-items: center;
   position: absolute;
-  top: -170px;
+  top: -220px;
   text-align: center;
   background-color: #66cdaa;
   padding: 10px 0;
@@ -110,20 +110,16 @@ nav {
   width: 85%;
   margin: 0 auto;
   display: flex;
-  align-items: center;
 }
-
+.id_text {
+  flex: 1;
+}
 .id_img img {
   width: 350px;
   height: 280px;
 }
-.id_img {
-  text-align: center;
-  flex: 4;
-  padding-right: 40px;
-}
-.id_text {
-  flex: 6;
+.id_text:first-child {
+  padding-right: 30px;
 }
 .id_text dl {
   padding-bottom: 30px;
@@ -200,7 +196,11 @@ nav {
 }
 .pm_img {
   width: 100%;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
+}
+.lang_text {
+  font-size: 18px;
+  padding-bottom: 30px;
 }
 .pm_btn {
   color: #fff;
@@ -216,5 +216,32 @@ nav {
 }
 .pm_btn:hover {
   background-color: steelblue;
+}
 
+
+
+.effort {
+  background-color: rgba(242, 242, 242,0.8);
+  padding: 100px 0 100px 0;
+}
+.ef_content_wrap {
+  width: 85%;
+  margin: 0 auto;
+}
+.main_title {
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 2px;
+  padding: 50px 0 100px 0;
+}
+.item_title {
+  font-size: 22px;
+  border-left: 10px solid #66cdaa;
+  padding-left: 8px;
+  margin-bottom: 20px;
+}
+.item_text {
+  font-size: 18px;
+  line-height: 25px;
+  padding-bottom: 30px;
 }
