--- a/introduction/css/introduction.css
+++ b/introduction/css/introduction.css
@@ -1,37 +1,3 @@
-/* header menu_list */
-.menu_list {
-  width: 100%;
-  height: 250px;
-  align-items: center;
-  position: absolute;
-  top: -270px;
-  text-align: center;
-  background-color: #66cdaa;
-  padding: 10px 0;
-  z-index: 15;
-  transition: 0.4s;
-}
-body.open_menu .menu_list {
-  top: 0px;
-}
-.menu_list li {
-  padding: 10px 0;
-  margin: 10px 0;
-  font-size: 18px;
-}
-.fa-times {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 20px;
-  color: #fff;
-  cursor: pointer;
-  z-index: 20;
-}
-.menu_list li a:hover {
-  color: #000;
-  transition: 0.4s;
-}
 /* header header_list*/
 nav {
   position: relative;
@@ -61,7 +27,7 @@ nav {
   margin-left: 50px;
   font-size: 16px;
 }
-.header_list li a,.menu_item {
+.header_list li a {
   text-decoration: none;
   color: #fff;
 }
@@ -76,7 +42,7 @@ main {
   margin: 0 auto;
 }
 .title_wrap {
-  padding-top: 130px;
+  padding-top: 80px;
 }
 .main_title_wrap {
   text-align: center;
@@ -127,7 +93,7 @@ main {
 
 /* q_and_a_wrap" */
 .q_and_a_wrap {
-  padding-top: 100px;
+  padding: 40px 0;
 }
 .q_and_a_title {
   color:  #2e8b57;
