menuの削除, 位置の調整

--- a/history/css/h_media.css
+++ b/history/css/h_media.css
@@ -2,9 +2,11 @@
   .fa-bars {
     display: block;
   }
-  .header_list {
-    display: none;
-    letter-spacing: 3px;
+}
+
+@media screen and (max-width: 620px) {
+  .header_list li a {
+    font-size: 14px;
   }
 }
 
