--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body {
 } 
 
 /* header menu_list */
+.menu-wrapper {
+  height: 100%;
+}
 .menu_list {
   width: 100%;
   height: 160px;
@@ -22,22 +25,26 @@ body {
   z-index: 15;
   transition: 0.4s;
 }
-body.open_menu .menu_list {
+#shadow {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 1;
+  transition: 0.4s;
+}
+body.open_menu #shadow {
+  display: block;
+}
+body.open_menu .menu_list{
   top: 0px;
 }
 .menu_list li {
   padding: 10px 0;
   margin: 10px 0;
   font-size: 18px;
-}
-.fa-times {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 20px;
-  color: #fff;
-  cursor: pointer;
-  z-index: 20;
 }
 .menu_list li a:hover {
   color: #000;
