--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -22,17 +22,18 @@
 .main_logo {
   width: 300px;
   height: 300px;
-  background-color: #fff;
   position: absolute;
   text-align: center;
   line-height: 300px;
   top: calc(50% - 150px);
   left: calc(50% - 150px);
+  background-image: url(../black-1072366__340.webp)
 }
 .main_logo h1 {
   font-size: 25px;
   letter-spacing: 8px;
   font-weight: lighter;
+  color: #dcdcdc;
 }
 .name {
   position: absolute;
