backgroud-imageのurl誤記修正

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -27,7 +27,7 @@
   line-height: 300px;
   top: calc(50% - 150px);
   left: calc(50% - 150px);
-  background-image: url(../black-1072366__340.webp)
+  background-image: url(../img/main_logo_background.webp)
 }
 .main_logo h1 {
   font-size: 25px;
