--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -13,11 +13,29 @@
   flex: 5;
   position: relative;
   background-color: #E2EBED;
+  transition: 1s;
+  cursor: pointer;
+}
+.top_left:hover {
+  background-color: #4682b4;
+}
+.top_left:hover .profile {
+  transform: translateY(-10px);
+  font-size: 20px;
 }
 .top_right {
   flex: 5;
   position: relative;
   background-color: #F1E9E5;
+  cursor: pointer;
+  transition: 1s;
+}
+.top_right:hover {
+  background-color: #cd5c5c;
+}
+.top_right:hover .work {
+  transform: translateY(-10px);
+  font-size: 20px;
 }
 .main_logo {
   width: 300px;
@@ -27,13 +45,21 @@
   line-height: 300px;
   top: calc(50% - 150px);
   left: calc(50% - 150px);
-  background-image: url(../img/main_logo_background.webp)
+  background-color: #fff;
+  z-index: 100;
+
 }
 .main_logo h1 {
   font-size: 25px;
   letter-spacing: 8px;
   font-weight: lighter;
-  color: #dcdcdc;
+  color: #808080;
+  animation: logo_color 5s infinite;
+}
+@keyframes logo_color {
+  0%,100% { color: #ff4500; }
+  25% { color: #ffa500; }
+  75% { color: #da70d6; }
 }
 .name {
   position: absolute;
@@ -46,56 +72,25 @@
   line-height: 25px;
   letter-spacing: 5px;
 }
-/* -------------------------------------- */
-
-.top_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
+.profile {
+  width: 200px;
   height: 50px;
-  box-sizing: border-box;
-  border-radius: 10px;
+  letter-spacing: 3px;
+  text-align: center;
   position: absolute;
+  bottom: calc(15% - 25px);
+  right: calc(50% - 100px);
+  color: #000;
+  transition: 1s;
 }
-
-.top_btn span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+.work {
+  width: 200px;
   height: 50px;
-  background: #fff;
-  box-sizing: border-box;
-  color: #333;
-  font-size: 14px;
-  letter-spacing: 0.1em;
-  text-decoration: none;
-  box-shadow: 0px 5px 12px #CAD4E2, -6px -6px 12px #FFF;
-  border-radius: 10px;
+  letter-spacing: 3px;
+  text-align: center;
   position: absolute;
-  top: -5px;
-  left: 0;
-  transition-duration: 0.2s;
-}
-.top_btn:hover span {
-  left: 0;
-  top: 0;
-  box-shadow: 0 0 4px #CAD4E2, -2px -2px 4px #FFF;
-}
-.profile_btn{
-  bottom: 80px;
-  left: calc(50% - 75px);
-}
-.work_btn {
-  bottom: 80px;
-  left: calc(50% - 75px);
-}
-.profile_btn span {
-  color: #696969;
-  background:#F1E9E5;
-}
-.work_btn span {
-  color: #696969;
-  background:#E2EBED;
+  bottom: calc(15% - 25px);
+  right: calc(50% - 100px);
+  color: #000;
+  transition: 1s;
 }
