--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,7 +38,7 @@
   transform: translateY(-10px);
   font-size: 20px;
 }
-.main_logo {
+.top_title {
   width: 300px;
   height: 300px;
   position: absolute;
@@ -48,19 +48,64 @@
   left: calc(50% - 150px);
   background-color: #fff;
   z-index: 100;
+  display: inline-block;
+}
 
-}
-.main_logo h1 {
-  font-size: 25px;
-  letter-spacing: 8px;
-  font-weight: lighter;
-  color: #808080;
-  animation: logo_color 5s infinite;
-}
 @keyframes logo_color {
   0%,100% { color: #ff4500; }
   25% { color: #ffa500; }
   75% { color: #da70d6; }
+}
+.main_logo {
+  overflow: hidden;
+  text-align: center;
+  font-size: 45px;
+  letter-spacing: 3px;
+}
+.text-move {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(1.1em) translateX(0.55em) rotateZ(180deg);
+  transition-property: all;
+  transition-duration: 0.4s;
+  transition-timing-function: ease;
+  will-change: transform;
+  animation: logo_color 5s infinite;
+}
+.text-move:nth-child(1) {
+  transition-delay: 0s;
+}
+.text-move:nth-child(2) {
+  transition-delay: 0.1s;
+}
+.text-move:nth-child(3) {
+  transition-delay: 0.2s;
+}
+.text-move:nth-child(4) {
+  transition-delay: 0.3s;
+}
+.text-move:nth-child(5) {
+  transition-delay: 0.4s;
+}
+.text-move:nth-child(6) {
+  transition-delay: 0.5s;
+}
+.text-move:nth-child(7) {
+  transition-delay: 0.6s;
+}
+.text-move:nth-child(8) {
+  transition-delay: 0.7s;
+}
+.text-move:nth-child(9) {
+  transition-delay: 0.8s;
+}
+.text-move:nth-child(10) {
+  transition-delay: 0.9s;
+}
+
+.main_logo.active .text-move {
+  opacity: 1;
+  transform: translateY(0em) translateX(0em) rotateZ(0deg);
 }
 .name {
   position: absolute;
@@ -103,12 +148,25 @@
   padding: 80px 0;
   height: 350px;
   background-color:#E2EBED;
+  overflow: hidden;
 }
 .profile_logo {
+  width: 100%;
   margin-left: 10%;
   font-size: 30px;
   padding-bottom: 30px;
+  display: flex;
 }
+.logo {
+  opacity: 0;
+  letter-spacing: 3px;
+}
+.logo span {
+  opacity: 0;
+  -webkit-transition: .6s ease-in-out;
+  transition: .6s ease-in-out;
+}
+
 .profile_item_wrap {
   width: 70%;
   margin: 0 auto;
@@ -122,12 +180,12 @@
   position: relative;
   z-index: 20;
   opacity: 0;
-  transition: 2s;
-  transform: translateY(20px);
+  transition: 1.2s;
+  transform: translate(800px, 0px) rotate(180deg);
 }
-.profile_item.active {
+.profile_item.item_active {
   opacity: 1;
-  transform: translateY(0px);
+  transform: translate(0px) rotate(0deg);
 }
 .profile_item::before {
   content: "";
