--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -54,7 +54,6 @@
   top: calc(50% - 150px);
   left: calc(50% - 150px);
   background-color: #fff;
-  /* border: 2px #000 solid ; */
   z-index: 100;
   display: inline-block;
 }
@@ -126,7 +125,8 @@
   font-size: 22px;
   line-height: 30px;
   letter-spacing: 5px;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #f5f5f5;
 }
 .taiki {
   transform: translateX(-100%);
