--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -53,7 +53,7 @@
   line-height: 300px;
   top: calc(50% - 150px);
   left: calc(50% - 150px);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   z-index: 100;
   display: inline-block;
 }
@@ -125,8 +125,8 @@
   font-size: 22px;
   line-height: 30px;
   letter-spacing: 5px;
-  background-color: rgba(0, 0, 0, 0.3);
-  color: #f5f5f5;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #808080;
 }
 .taiki {
   transform: translateX(-100%);
