--- a/css/media.css
+++ b/css/media.css
@@ -64,6 +64,9 @@
   }
 }
 @media screen and (max-width:800px) {
+  .profile_item_wrap {
+    width: 100%;
+  }
   .profile_item {
     width: 200px;
   }
@@ -78,16 +81,58 @@
   }
 }
 @media screen and (max-width:500px) {
+  .top_title {
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
+  }
+  .main_logo {
+    font-size: 28px;
+    letter-spacing: 5px;
+  }
+  .top_right_text {
+    width: 100px;
+    height: 50px;
+    bottom: calc(15% - 25px);
+    right: calc(50% - 50px);
+    font-size: 16px;
+  }
+  .top_left_text {
+    width: 130px;
+    height: 50px;
+    bottom: calc(15% - 25px);
+    right: calc(50% - 65px);
+    font-size: 16px;
+  }
   .profile_item {
-    width: 170px;
+    width: 150px;
+    height: 150px;
+  }
+  .top_left:hover .top_left_text {
+    transform: translateY(-30px);
+    font-size: 16px;
+  }
+  .top_right:hover .top_right_text {
+    transform: translateY(-30px);
+    font-size: 16px;
   }
   .profile_item::before {
-    width: 170px;
+    width: 150px;
+    height: 150px;
+  }
+  .profile_item p {
+    font-size: 16px;
   }
   .create_title {
     font-size: 22px;
   }
   .create_text {
     font-size: 18px;
+  }
+  .address , .quiz , .todo {
+    width: 100%;
+    padding: 30px 0;
   }
 }
