--- a/css/media.css
+++ b/css/media.css
@@ -85,6 +85,9 @@
   }
 }
 @media screen and (max-width:500px) {
+  .body {
+    min-width: 300px;
+  }
   .top_title {
     width: 200px;
     height: 200px;
