--- a/css/media.css
+++ b/css/media.css
@@ -62,8 +62,6 @@
   .btn_wrap {
     width: 70%;
   }
-}
-@media screen and (max-width:800px) {
   .main_logo {
     font-size: 32px;
     letter-spacing: 5px;
@@ -85,9 +83,6 @@
   }
 }
 @media screen and (max-width:500px) {
-  .body {
-    min-width: 300px;
-  }
   .top_title {
     width: 200px;
     height: 200px;
@@ -112,6 +107,9 @@
     bottom: calc(15% - 25px);
     right: calc(50% - 65px);
     font-size: 16px;
+  }
+  .space {
+    height: 150px;
   }
   .fa-user-tie {
     font-size: 90px;
@@ -150,11 +148,15 @@
   .w_logo {
     font-size: 22px;
   }
+  .bono_cover {
+    opacity: 1;
+  }
   .create_title {
     font-size: 22px;
   }
   .cover_item {
     padding-top: 2%;
+    transform: translate(0px) rotate(0deg);
   }
   .cover_code {
     font-size: 16px;
@@ -174,8 +176,11 @@
     padding: 2px 0;
     margin: 5px 0 0 0;
   }
-  .address , .quiz , .todo {
+  .study_item {
+    justify-content: center;
+  }
+  .quiz_item , .todo_item{
     width: 100%;
-    padding: 30px 0;
+    justify-content: baseline;
   }
 }
